# hexlet-django-blog

./: pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: urls.py  views.py
hexlet_django_blog/article/templates/articles/: index.html
hexlet_django_blog/templates/: index.html
